# Kea_SOFT_System_Integration_2024_Spring

17._Multipart-Forms/: index.html
17._Multipart-Forms/node-multipart-forms/: app.js
17._Multipart-Forms/python-multipart-forms/: main.py  pyproject.toml
18.Image/: base64.html
19.Audio/: index.html
20.MPEG_DASH/: about.md  app.js  package-lock.json  package.json
20.MPEG_DASH/videos/: chunk-stream0-00001.m4s  chunk-stream0-00002.m4s  chunk-stream0-00003.m4s  chunk-stream0-00004.m4s  chunk-stream0-00005.m4s  chunk-stream0-00006.m4s  chunk-stream0-00007.m4s  chunk-stream0-00008.m4s  chunk-stream0-00009.m4s  chunk-stream0-00010.m4s  chunk-stream0-00011.m4s  chunk-stream0-00012.m4s  chunk-stream0-00014.m4s  chunk-stream0-00015.m4s  chunk-stream0-00016.m4s  chunk-stream0-00017.m4s  chunk-stream0-00018.m4s  chunk-stream0-00019.m4s  chunk-stream0-00020.m4s  chunk-stream0-00021.m4s  chunk-stream0-00022.m4s  chunk-stream0-00023.m4s  chunk-stream0-00024.m4s  chunk-stream0-00025.m4s  chunk-stream0-00026.m4s  chunk-stream0-00027.m4s  chunk-stream0-00028.m4s  chunk-stream0-00029.m4s  chunk-stream0-00030.m4s  chunk-stream0-00031.m4s  chunk-stream0-00032.m4s
23.migrations/node-knex/: knexfile.js  package-lock.json  package.json
23.migrations/python-alembic/: pyproject.toml
25.OpenAPI/node-OpenAPI/: index.js  package-lock.json
25.OpenAPI/python-OpenAPI/: main.py  pyproject.toml
25.OpenAPI/python-OpenAPI/routes/: __init__.py  spacecraft.py
26._GraphQL/node_basic/: app.js  package-lock.json  (+1 more)
Opgave.06a (Rider)/: Websockets.sln
Opgave.08c (Rider)/: Authentication.sln
(+75 files in other folders)
