[tool.poetry]
name = "python-openapi"
version = "0.1.0"
description = ""
authors = ["DavidGabelgaard <davi493c@edu.easj.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
